--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,15 @@
   "author": "sanjayGupta",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2"
   }
 }
