--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
